<resources>
    <string name="app_name">LifeHack</string>
    <string name="test_your_knowledge_of_real_hacks_vs_myths">Test your knowledge of real hacks vs myths.</string>
    <string name="start">Start</string>
    <string name="welcome_to_life_hack_quiz">Welcome to Life Hack Quiz!</string>
    <string name="test_your_knowledge_of_real_hacks_vs_myths_in_a_fun_quiz">Test your knowledge of real hacks vs myths in a fun quiz!</string>
    <string name="score">Score</string>
    <string name="review">Review</string>
    <string name="feedback">Feedback</string>
    <string name="life_hack_quiz">✨ Life Hack Quiz ✨</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="hack_true">Hack (True)</string>
    <string name="myth_false">Myth (False)</string>
    <string name="next">Next</string>
    <string name="question_here">Question here</string>
    <string name="coffee_question">Does drinking coffee late at night affect your sleep cycle?</string>
    <string name="correct_coffee_feedback">Correct! It can stay in your system for hours.</string>
    <string name="incorrect_coffee_feedback">Try again! Caffeine is a strong stimulant.</string>
    <string name="loading_next_question">Loading next question...</string>
    <string name="final_score_format">%1$d / %2$d</string>
</resources>