<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAD53762"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"> <!-- DARK PINK BACKGROUND -->

    <!-- Title -->
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/life_hack_quiz"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- Description -->
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="#E91E63"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/test_your_knowledge_of_real_hacks_vs_myths_in_a_fun_quiz"
        android:textColor="#000000"
        android:textSize="16sp" />

    <!-- Gold Divider -->
    <View
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginBottom="30dp"
        android:background="#D4AF37" />

    <!-- Start Button -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/luxury_button"
        android:text="@string/start_quiz"
        android:textColor="#FFFDE7"
        tools:ignore="TextContrastCheck" />

</LinearLayout>